<resources>
    <string name="app_name">StudeCare: UTS Health Tracking</string>

    <!--Home-->
    <string name="home_my_appointments"> My Appointments</string>
    <string name="home_add_appointment">New Appointment</string>

    <!--Register-->
    <string name="register_fullname">Full Name</string>

    <!--Loading-->
    <string name="loading_percent">%</string>
    <string name="loading_format">%1$d%2$s</string>

    <!--Login-->
    <string name="login_student_id">Email Address</string>
    <string name="login_password">Password</string>
    <string name="login_login">SIGN IN</string>
    <string name="login_register">REGISTER</string>
    <string name="login_error_response">Error connecting with the server.</string>
    <string name="login_error_incorrect_details">Invalid username or password.</string>
    <string name="login_header_text">UTS:</string>
    <string name="login_header_sub_text">Medical</string>
    <string name="email_already_registered_text">Email has already been registered.</string>

    <!--API-->
    <string name="api_email">"email"</string>
    <string name="api_user">"user"</string>
    <string name="api_name">"name"</string>
    <string name="api_access_token">"token"</string>

    <!--Appointments-->
    <string name="appointments_date">Date</string>
    <string name="appointments_time">Time</string>
    <string name="appointments_confirm">Confirm</string>

    <!--Information-->
    <string name="information_notes">My Notes</string>
    <string name="information_save">Save</string>
    <string name="information_edit">Edit</string>

    <!--Time-->
    <string name="time_concatenate_date">%1$d/%2$d/%3$d</string>
    <string name="time_concatenate_time">%1$d:%2$d</string>

    <!--Dialog-->
    <string name="dialog_timeslots_title">Confirm Timeslot?</string>
    <string name="dialog_confirm">Confirm</string>
    <string name="dialog_cancel">Cancel</string>

    <string-array name="array_reference">
        <item>com.github.glomadrian.grav.generator.animation.PathAnimator</item>
        <item>com.github.glomadrian.grav.generator.animation.BallSizeAnimator</item>
    </string-array>

    <string name="circle">
M527.023,71.8233 C780.213,71.8233,985.464,277.075,985.464,530.265
C985.464,783.455,780.213,988.707,527.023,988.707
C273.832,988.707,68.5809,783.455,68.5809,530.265
C68.5809,277.075,273.832,71.8233,527.023,71.8233 Z
    </string>

    <string name="circle_inverse">
        71.8233, 527.023, 71.8233, 273.832, 277.075, C68.5809,
        530.265, 68.5809, 783.455, 68.5809, 988.707, C273.832,
        988.707, 527.023, 988.707, 780.213, 783.455, C985.464,
        530.265, 985.464, 277.075, 985.464, 71.8233, C780.213,
        71.8233, M527.023 Z
    </string>

    <integer name="circle_original_width">1062</integer>
    <integer name="circle_original_height">1062</integer>
    <string name="title_activity_settings_screen">SettingsScreen</string>

    <!--Apppointments-->
    <string name="DatePickerDialog">DatePickerDialog</string>
    <string name="TimePicker">TimePicker</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="register">register</string>
    <string name="register_new_user">Register new user</string>
    <string name="full_name">Full Name</string>
    <string name="register_register">Register</string>
    <string name="title_register">Register</string>

</resources>
