<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context="com.mad.studecare.LoginScreen">

    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:gravity="center_horizontal">

        <EditText
            android:id="@+id/login_user"
            android:inputType="text"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            android:background="@drawable/edittext"
            android:layout_width="match_parent"
            android:textAlignment="center"
            android:hint="@string/login_student_id"
            android:layout_height="50dp" />

        <EditText
            android:id="@+id/login_password"
            android:inputType="textPassword"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            android:layout_below="@id/login_user"
            android:background="@drawable/edittext"
            android:layout_width="match_parent"
            android:textAlignment="center"
            android:hint="@string/login_password"
            android:layout_height="50dp" />

        <Button
            android:id="@+id/login_login"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            android:layout_centerInParent="true"
            android:layout_below="@id/login_password"
            android:background="@drawable/edittext"
            android:text="@string/login_login"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:hint="@string/login_login"/>

    </RelativeLayout>

</RelativeLayout>
